--- a/source/index.html
+++ b/source/index.html
@@ -17,7 +17,7 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--active">
-              <a>
+              <a href="index.html">
                 ГЛАВНАЯ
               </a>
             </li>
@@ -36,9 +36,9 @@
       </nav>
     </header>
     <main class="page-main">
-      <h1 class="visually-hidden"></h1>
+      <h1 class="visually__hidden"></h1>
       <section class="slogan">
-        <div class="slogan-wrapper">
+        <div class="slogan__wrapper">
           <h2 class="slogan__header">Функциональное питание для котов</h2>
           <p class="slogan__intro">Занялся собой? Займись котом!</p>
           <img class="slogan__img" src="img/slogan-mobile.jpg" width="280" height="270" alt="Функциональное питание для котов">
@@ -46,7 +46,7 @@
         </div>
       </section>
       <section class="programs">
-        <div class="programs-wrapper">
+        <div class="programs__wrapper">
           <h2 class="visually-hidden">Наши программы</h2>
           <ul class="programs__list">
             <li class="programs__item programs__item--slim">
@@ -71,68 +71,61 @@
         </div>
       </section>
       <section class="functioning">
-        <div class="functioning-wrapper">
-          <h2>Как это работает</h2>
+        <div class="functioning__wrapper">
+          <h2 class="functioning__title">Как это работает</h2>
           <ul class="functioning__list"> <!-- Наверное можно и без списка-->
             <li class="functioning__item functioning__item--useful">
-              <p>
-                Функциональное питание <br> содержит только полезные <br> питательные вещества.
-              </p>
+              Функциональное питание <br> содержит только полезные <br> питательные вещества.
             </li>
             <li class="functioning__item functioning__item--flour">
-              <p>
-                Выпускается в виде порошка,<br> который нужно лишь залить <br> кипятком и готово.
-              </p>
+              Выпускается в виде порошка,<br> который нужно лишь залить <br> кипятком и готово.
             </li>
             <li class="functioning__item functioning__item--food">
-              <p>
-                Замените один-два приема <br> обычной еды на наше <br> функциональное питание.
-              </p>
+              Замените один-два приема <br> обычной еды на наше <br> функциональное питание.
             </li>
             <li class="functioning__item functioning__item--month">
-              <p>
-                Уже через месяц <br> наслаждайтесь изменениями <br> к лучшему вашего питомца!
-              </p>
+              Уже через месяц <br> наслаждайтесь изменениями <br> к лучшему вашего питомца!
             </li>
           </ul>
         </div>
       </section>
       <section class="example">
-        <div class="example-wrapper">
+        <div class="example__wrapper">
           <h2 class="example__title">Живой пример</h2>
           <p class="example__description">
             Борис сбросил 5 кг за 2 месяца, просто <br> заменив свой обычный корм на Cat <br>
             Energy Slim. Отличный результат без <br> изнуряющих тренировок! При этом он не <br>
              менял своих привычек и по-прежнему <br> спит по 16 часов в день.
           </p>
-          <form action="https://echo.htmlacademy.ru/courses" method="post"></form>
-            <fieldset class="example__weight">
-              <p>5кг</p>
-              <legend>снижение веса</legend>
-            </fieldset>
-            <fieldset class="example__time">
-              <p>60дней</p>
-              <legend>затрачено времени</legend>
-            </fieldset>
-          </form>
+          <div class="examples">
+            <ul class="examples__list examples__list--weight">
+              <li class="examples__value">5кг</li>
+              <li class="examples__description">снижение веса</li>
+            </ul>
+            <ul class="examples__list examples__list--time">
+              <p class="examples__description">60дней</p>
+            </ul>
+          </div>
           <p class="example__cost">Затраты на питание: 15 000 РУБ.</p>
           <img src="#" alt="КОТ">
+        </div>
+      </section>
+      <section class="contacts">
+        <div class="contacts__wrapper">
+          <p class="contacts__title">
+            ПРИГЛАШАЕМ <br> К СОТРУДНИЧЕСТВУ <br> ДИЛЕРОВ!
+          </p>
+          <address class="contacts__text">
+            ул. Большая <br> Конюшенная, д. 19/8 <br>Санкт-Петербург
+          </address>
+          <span>Карта</span>
         </div>
       </section>
     </main>
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <div class="page-footer__contacts contacts">
-          <p class="contacts__title">
-            ПРИГЛАШАЕМ <br> К СОТРУДНИЧЕСТВУ <br> ДИЛЕРОВ!
-          </p>
-          <p class="contacts__text">
-            ул. Большая <br> Конюшенная, д. 19/8 <br>Санкт-Петербург
-          </p>
-          <span>Карта</span>
-        </div>
         <div class="page-footer__social social">
-          <b class="social__title">Давайте дружить!</b>
+          <h3 class="social__title">Давайте дружить!</h3>
           <ul class="social__list">
             <li class="social__item">
               <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
