--- a/source/index.html
+++ b/source/index.html
@@ -61,7 +61,7 @@
             <li class="programs__item programs__item--weightgain">
                 <h3 class="programs__title">НАБОР МАССЫ</h3>
                 <p class="programs__description">Заработать авторитет среди <br> дворовых котов и даже собак? <br>
-                   Серия Cat Energy Pro поможет <br> вашему коту нарастить <br> необходимые мышцы!
+                  Серия Cat Energy Pro поможет <br> вашему коту нарастить <br> необходимые мышцы!
                 </p>
                 <a class="programs__link" href="">
                   КАТАЛОГ PRO
@@ -95,15 +95,18 @@
           <p class="example__description">
             Борис сбросил 5 кг за 2 месяца, просто <br> заменив свой обычный корм на Cat <br>
             Energy Slim. Отличный результат без <br> изнуряющих тренировок! При этом он не <br>
-             менял своих привычек и по-прежнему <br> спит по 16 часов в день.
+            менял своих привычек и по-прежнему <br> спит по 16 часов в день.
           </p>
           <div class="examples">
-            <ul class="examples__list examples__list--weight">
-              <li class="examples__value">5кг</li>
-              <li class="examples__description">снижение веса</li>
-            </ul>
-            <ul class="examples__list examples__list--time">
-              <p class="examples__description">60дней</p>
+            <ul class="examples__list">
+              <li class="examples__list examples__list--weight">
+                <p class="examples__value">5кг</p>
+                <p class="examples__description">снижение веса</p>
+              </li>
+              <li class="examples__list examples__list--time">
+                <p class="examples__value">60 дней</p>
+                <p class="examples__description">затрачено времени</p>
+              </li>
             </ul>
           </div>
           <p class="example__cost">Затраты на питание: 15 000 РУБ.</p>
