--- a/source/form.html
+++ b/source/form.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Кэт энерджи: подбор программы</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="page-header">
@@ -39,75 +40,75 @@
       <h1 class="page-title">Подбор программы</h1>
       <p class="page-text">Заполните анкету, и мы подберем <br>программу питания для вашего кота
       </p>
-      <form class="applicationform" action="https://echo.htmlacademy.ru" method="post">
-        <section class="applicationform__wrapper">
-          <div class="applicationform__personaldata">
-            <p class="personaldata__name"> <!-- Или лучше сделать здесь personaldata__item  personaldata__item--name и т.д.?-->
-              <label class="personaldata__label" for="personaldata-name">Имя:*</label>
-              <input class="personaldata-input" id="personaldata-name" type="text" placeholder="БАРСИК"> <!-- Нужно name?-->
+      <form class="application-form" action="https://echo.htmlacademy.ru" method="post">
+        <section class="application-form__wrapper">
+          <div class="application-form__personal-data personal-data"> //TODO Или class="application-form__item personal-data"
+            <p class="personal-data__name"> <!-- Или лучше сделать здесь personal-data__item  personal-data__item--name и т.д.?-->
+              <label class="personal-data__label" for="personal-data-name">Имя:*</label>
+              <input class="personal-data__input" id="personal-data-name" type="text" placeholder="БАРСИК"> <!-- Нужно name?-->
             </p>
-            <p class="personaldata__weight">
-              <label class="personaldata__label" for="personaldata-weight">ВЕС (КГ):*</label>
-              <input class="personaldata-input" id="personaldata-weight" type="number" placeholder="7">
+            <p class="personal-data__weight">
+              <label class="personal-data__label" for="personal-data-weight">ВЕС (КГ):*</label>
+              <input class="personal-data__input" id="personal-data-weight" type="number" placeholder="7">
             </p>
-            <p class="personaldata__age">
-              <label class="personaldata__label" for="personaldata-age">ВОЗРАСТ (ЛЕТ):</label>
-              <input class="personaldata-input" id="personaldata-age" type="number" placeholder="7">
+            <p class="personal-data__age">
+              <label class="personal-data__label" for="personal-data-age">ВОЗРАСТ (ЛЕТ):</label>
+              <input class="personal-data__input" id="personal-data-age" type="number" placeholder="7">
             </p>
           </div>
-          <div class="applicationform__purpose">
+          <div class="application-form__purpose purpose">
             <fieldset class="purpose__wrapper">
               <ul class="purpose__list">
-                <li class="purpose-item">
-                  <input class="" type="radio" name="" value="losingweight" id="losingweight" checked>
-                  <label for="losingweight">ПОХУДЕНИЕ</label>
+                <li class="purpose__item">
+                  <input class="purpose__input" type="radio" name="" value="losingweight" id="losingweight" checked>
+                  <label class="purpose__label" for="losingweight">ПОХУДЕНИЕ</label>
                 </li>
                 <li class="purpose__list">
-                  <input class="" type="radio" name="" value="weightgain" id="weightgain">
-                  <label for="weightgain">НАБОР МАССЫ</label>
+                  <input class="purpose__input" type="radio" name="" value="weightgain" id="weightgain">
+                  <label class="purpose__label" for="weightgain">НАБОР МАССЫ</label>
                 </li>
                 <li class="purpose__list">
-                  <input class="" type="radio" name="" value="advice" id="advice">
-                  <label for="advice">Не знаю (Нужен ваш совет)</label>
+                  <input class="purpose__input" type="radio" name="" value="advice" id="advice">
+                  <label class="purpose__label" for="advice">Не знаю (Нужен ваш совет)</label>
                 </li>
               </ul>
             </fieldset>
           </div>
-          <div class="applicationform__contactsforms" action="https://echo.htmlacademy.ru" method="post">
-            <h2 class="contactsforms__title">Контактные данные (владельца кота)</h2><!-- Можно так?-->
-            <span class="contactsforms__wrapper">
-              <p class="contactsforms__item">
-                <label class="contactsforms-item--name" for="contactsforms-name">E-mail:*</label>
-                <input class="contactsforms-item--value" id="contactsforms-name" type="email" name="mail" placeholder="кuklachev@gmail.com">
+          <div class="application-form__contacts-forms contacts-forms" action="https://echo.htmlacademy.ru" method="post"> //TODO contacts-forms надо еще отдельно
+            <h2 class="contacts-forms__title">Контактные данные (владельца кота)</h2><!-- Можно так?-->
+            <span class="contacts-forms__wrapper">
+              <p class="contacts-forms__item">
+                <label class="contacts-forms__label" for="contacts-forms-name">E-mail:*</label>
+                <input class="contacts-forms__input" id="contacts-forms-name" type="email" name="mail" placeholder="кuklachev@gmail.com">
               </p>
-              <p class="contactsforms__item">
-                <label class="contactsforms-item--name" for="contactsforms-phone">Телефон:*</label>
-                <input class="contactsforms-item--value" id="contactsforms-phone" type="tel" name="phone" placeholder="8 (960) 900-60-90">
+              <p class="contacts-forms__item">
+                <label class="contacts-forms__label" for="contacts-forms-phone">Телефон:*</label>
+                <input class="contacts-forms__input" id="contacts-forms-phone" type="tel" name="phone" placeholder="8 (960) 900-60-90">
               </p>
             </span>
           </div>
-          <div class="applicationform__comments" action="https://echo.htmlacademy.ru" method="post">
+          <div class="application-form__comments comments" action="https://echo.htmlacademy.ru" method="post">
             <h2 class="comments__title">Комментарий</h2>
             <textarea name="comment" id="comment-field" rows="10">Расскажите обо всех повадках кота </textarea>
           </div>
-          <div class="applicationform__additionally">
+          <div class="application-form__additionally additionally">
             <fieldset class="additionally__wrapper">
               <ul class="additionally__list">
-                <li class="additionally-item">
-                  <input class="" type="checkbox" name="" value="losingweight" id="losingweight" checked>
-                  <label for="losingweight">Сахарозаменитель</label>
+                <li class="additionally__item">
+                  <input class="additionally__input" type="checkbox" name="" value="losingweight" id="losingweight" checked>
+                  <label class="additionally__label" for="losingweight">Сахарозаменитель</label>
                 </li>
                 <li class="additionally__list">
-                  <input class="" type="checkbox" name="" value="weightgain" id="weightgain">
-                  <label for="weightgain">Питьевая вода</label>
+                  <input class="additionally__input" type="checkbox" name="" value="weightgain" id="weightgain">
+                  <label class="additionally__label" for="weightgain">Питьевая вода</label>
                 </li>
                 <li class="additionally__list">
-                  <input class="" type="checkbox" name="" value="advice" id="advice">
-                  <label for="advice">молоко</label>
+                  <input class="additionally__input" type="checkbox" name="" value="advice" id="advice">
+                  <label class="additionally__label" for="advice">молоко</label>
                 </li>
                 <li class="additionally__list">
-                  <input class="" type="checkbox" name="" value="advice" id="advice">
-                  <label for="advice">витамины</label>
+                  <input class="additionally__input" type="checkbox" name="" value="advice" id="advice">
+                  <label class="additionally__label" for="advice">витамины</label>
                 </li>
               </ul>
               <input type="submit" value="подобрать программу">
