--- a/source/index.html
+++ b/source/index.html
@@ -9,9 +9,9 @@
     <header class="page-header">
       <a class="page-header__logo">
         <img src="img/logotype-mobile.svg" width="33" height="37" alt="CAT ENERGY">
-        <span class="page-header__name">
-          CAT ENERGY <!--или это в меню внести?-->
-        </span>
+        <!--<span class="page-header__name">
+          CAT ENERGY или это в меню внести?
+        </span> -->
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -19,17 +19,17 @@
           <ul class="main-nav__list site-list">
             <li class="site-list__item site-list__item--active">
               <a href="index.html">
-                ГЛАВНАЯ
+                Главная
               </a>
             </li>
             <li class="site-list__item">
               <a href="photo.html">
-                КАТАЛОГ ПРОДУКЦИИ
+                Каталог продукции
               </a>
             </li>
             <li class="site-list__item">
               <a href="form.html">
-                ПОДБОР ПРОГРАММЫ
+                Подбор программы
               </a>
             </li>
           </ul>
@@ -43,12 +43,12 @@
           <h2 class="slogan__header">Функциональное питание для котов</h2>
           <p class="slogan__intro">Занялся собой? Займись котом!</p>
           <img class="slogan__img" src="img/slogan-mobile.jpg" width="280" height="270" alt="Функциональное питание для котов">
-          <a class="button slogan__to-all" href="#">ПОДОБРАТЬ ПРОГРАММУ</a>
+          <a class="button slogan__to-all" href="#">Подобрать программу</a>
         </div>
       </section>
       <section class="programs">
         <div class="programs__wrapper">
-          <h2 class="visually-hidden">Наши программы</h2>
+          <h2 class="visually__hidden">Наши программы</h2>
           <ul class="programs__list">
             <li class="programs__item programs__item--slim">
               <h3 class="programs__title">Похудение</h3>
@@ -56,16 +56,16 @@
                 по деревьям? Пора на диету! Cat <br> Energy Slim поможет вашему <br> питомцу сбросить лишний вес.
               </p>
               <a class="programs__link" href="">
-                КАТАЛОГ SLIM
+                Каталог SLIM
               </a>
             </li>
             <li class="programs__item programs__item--weightgain">
-                <h3 class="programs__title">НАБОР МАССЫ</h3>
+                <h3 class="programs__title">Набор массы</h3>
                 <p class="programs__description">Заработать авторитет среди <br> дворовых котов и даже собак? <br>
                   Серия Cat Energy Pro поможет <br> вашему коту нарастить <br> необходимые мышцы!
                 </p>
                 <a class="programs__link" href="">
-                  КАТАЛОГ PRO
+                  Каталог PRO
                 </a>
             </li>
           </ul>
@@ -117,7 +117,7 @@
       <section class="contacts">
         <div class="contacts__wrapper">
           <p class="contacts__title">
-            ПРИГЛАШАЕМ <br> К СОТРУДНИЧЕСТВУ <br> ДИЛЕРОВ!
+            Приглашаем <br> к сотрудничеству <br> дилеров!
           </p>
           <address class="contacts__text">
             ул. Большая <br> Конюшенная, д. 19/8 <br>Санкт-Петербург
@@ -129,7 +129,7 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper">
         <div class="page-footer__social social">
-          <h3 class="social__title">Давайте дружить!</h3>
+          <h3 class="visually__hidden">Давайте дружить!</h3>
           <ul class="social__list">
             <li class="social__item">
               <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
