--- a/source/catalog.html
+++ b/source/catalog.html
@@ -23,7 +23,7 @@
               </a>
             </li>
             <li class="site-list__item site-list__item--active">
-              <a href="photo.html">
+              <a href="catalog.html">
                 КАТАЛОГ ПРОДУКЦИИ
               </a>
             </li>
