Стилизация страницы каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,10 +9,10 @@
     <header class="page-header">
       <a class="page-header__logo">
         <img src="img/logotype-mobile.svg" width="33" height="37" alt="CAT ENERGY">
+        <!--<span class="page-header__name">
+          CAT ENERGY или это в меню внести?
+        </span> -->
       </a>
-      <span class="page-header__name">
-        CAT ENERGY <!--или это в меню внести?-->
-      </span>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
         <div class="main-nav__wrapper">
@@ -42,9 +42,9 @@
         <div class="catalog__wrapper">
           <h2 class="catalog__title">Каталог продукции</h2>
           <ul class="catalog__list">
-            <li class="catalog__item product"> TODO:
+            <li class="catalog__item product">
               <a href="#.html">
-                <img class="product__img product__img--mini" src="img/chicken500g.jpg" width="68" height="86"
+                <img class="product__img" src="img/chicken500g.jpg" width="68" height="86"
                 alt="Cat Energy PRO 500 г Курица">
                 <h3 class="product__title">
                   Cat Energy PRO 500 г
@@ -70,7 +70,7 @@
             </li>
             <li class="catalog__item product">
               <a href="#.html">
-                <img class="product__img product__img--max" src="img/chicken1000g.jpg" width="84" height="100"
+                <img class="product__img" src="img/chicken1000g.jpg" width="84" height="100"
                 alt="Cat Energy PRO 1000 г Курица">
                 <h3 class="product--title">
                   Cat Energy PRO 1000 г
@@ -96,7 +96,7 @@
             </li>
             <li class="catalog__item product">
               <a href="#.html">
-                <img class="product__img product__img--mini" src="img/fish500g.jpg" width="68" height="86"
+                <img class="product__img" src="img/fish500g.jpg" width="68" height="86"
                 alt="Cat Energy PRO 500 г Рыба">
                 <h class="product__item--title">
                   Cat Energy PRO 500 г
@@ -122,7 +122,7 @@
             </li>
             <li class="catalog__item product">
               <a href="#.html">
-                <img class="product__img catalog__img--max" src="img/fish1000g.jpg" width="84" height="100"
+                <img class="product__img" src="img/fish1000g.jpg" width="84" height="100"
                 alt="Cat Energy PRO 1000 г Рыба">
                 <h3 class="product__item--title">
                   Cat Energy PRO 1000 г
@@ -179,7 +179,7 @@
                 </h3>
                 <p class="show-more__decription">На самом деле вкусов
                   гораздо больше!</p>
-                <a class="button show-more__show-all" href="#">  //TODO  Правильно ?
+                <a class=" show-more__show-all button" href="#">
                   Показать все
                 </a>
               </a>
@@ -188,12 +188,12 @@
         </div>
       </section>
       <section class="additional-goods">
-        <h3 class="additional-goods__title">Дополнительные товары</h3>
+        <h2 class="additional-goods__header">Дополнительные товары</h2>
         <div class="additional-goods__wrapper">
           <ul class="additional-goods__list">
             <li class="additional-goods__item">
               <div class="additional-goods__description">
-                <h3 class="additional-goods__title">Сахарозаменитель</h3> //TODO Почему не additional-goods__item--title и тд
+                <h3 class="additional-goods__title">Сахарозаменитель</h3>
                 <p class="additional-goods__value">1 упаковка (100 г)</p>
                 <p class="additional-goods__price">200 Р</p>
               </div>
